04_git/aws/10_eks/03_aws_eks/01_bootstrap/vault/yaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress-03-aws-eks
  namespace: vault
spec:
  ingressClassName: external-nginx
  rules:
    - host: 03-aws-eks-vault.panwang.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-03-aws-eks-ui
                port:
                  number: 8200
